--- a/style.css
+++ b/style.css
@@ -3,16 +3,37 @@
     padding: 0;
 }
 
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
 .calculator {
-    height: 500px;
-    width: 250px;
+    height: 90vh;
+    width: 300px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     box-sizing: border-box;
 }
 
 .display {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: end;
     grid-area: 1 / 1 / auto / span 4;
+    height: 15vh;
+    width: inherit;
+    background-color: black;
+    color: white;
+}
+
+div > #previous-operand, div > #current-operand {
+    height: 7.5vh;
+    width: inherit;
 }
 
 #all-clear-btn {
